--- a/src/jecode/views/templates/base.html
+++ b/src/jecode/views/templates/base.html
@@ -4,6 +4,18 @@
         <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>jecode.org - coder et apprendre à coder</title>
     </head>
+
+   <script>
+   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ 
+   ga('create', 'UA-2658857-14', 'jecode.org');
+   ga('send', 'pageview');
+
+  </script>
+
     <body>
         <!-- navbar -->
         <div class="navbar navbar-inverse navbar-fixed-top">
