Update title in base.html
Also remove ref to @bzg2 in twitter

--- a/src/jecode/views/templates/base.html
+++ b/src/jecode/views/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>jecode.org - coder et apprendre à coder</title>
+        <title>Je code et vous devriez apprendre !</title>
     </head>
 
    <script>
