--- a/src/jecode/views/templates/base.html
+++ b/src/jecode/views/templates/base.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-      <link type="text/css" rel="stylesheet" href="/css/generic.css" />
-      <title>Jecode.org: l'école doit nous apprendre à coder</title>
-    </head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="/css/generic.css" />
+    <title>Jecode.org: apprenons l'informatique à l'école !</title>
+  </head>
 
-   <script>
-   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-   ga('create', 'UA-2658857-14', 'jecode.org');
-   ga('send', 'pageview');
+  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-2658857-14', 'jecode.org');
+    ga('send', 'pageview');
   </script>
 
-    <body>
+  <body>
 
-      <a href="https://twitter.com/share"
-	 class="twitter-share-button"
-	 data-lang="fr" data-size="large" data-count="yes"
-	 data-hashtags="jecode">Tweeter</a>
+    <a href="https://twitter.com/share"
+       class="twitter-share-button"
+       data-lang="fr" data-size="large" data-count="yes"
+       data-hashtags="jecode">Tweeter</a>
 
-      <script>!function(d,s,id){var
+    <script>!function(d,s,id){var
       js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
       'script', 'twitter-wjs');
-      </script>
+    </script>
 
-      <div class="navbar">
-        <ul class="nav">
-          <li class="{{home-selected}}"><a href="/">jecode.org</a></li>
-          <li class="{{person-selected}}"><a href="/codeurs">Codeurs</a></li>
-          <li class="{{about-selected}}"><a href="/apropos">À propos</a></li>
-        </ul>
-      </div>
+    <div class="navbar">
+      <ul class="nav">
+        <li class="{{home-selected}}"><a href="/">jecode.org</a></li>
+        <li class="{{person-selected}}"><a href="/codeurs">Codeurs</a></li>
+        <li class="{{about-selected}}"><a href="/apropos">À propos</a></li>
+      </ul>
+    </div>
 
-      <div class="container">
-        {% block content %}
-        {% endblock %}
-      </div>
-    </body>
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
+  </body>
 </html>
-
