Small css enhancement to the display of portraits

--- a/resources/public/css/generic.css
+++ b/resources/public/css/generic.css
@@ -55,7 +55,9 @@ li.active {
 }
 
 .container img {
+    display: block;
     max-width: 170px;
+    border-radius: 50%;
     float: right;
     margin: 2em;
 }
