New id #who for the short bio in codeurs/*

--- a/resources/public/css/generic.css
+++ b/resources/public/css/generic.css
@@ -81,3 +81,9 @@ li.active {
     color: white;
 }
 
+#who {
+    font-style:italic;
+    background-color: #eee;
+    padding: .4em;
+    border-radius: 8px;
+}
