--- a/src/jecode/views/templates/base.html
+++ b/src/jecode/views/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link type="text/css" rel="stylesheet" href="/css/generic.css" />
-    <title>Jecode.org: apprenons l'informatique à l'école !</title>
+    <title>jecode.org: apprenons l'informatique... à l'école et ailleurs !</title>
   </head>
 
   <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
