--- a/resources/public/css/generic.css
+++ b/resources/public/css/generic.css
@@ -1,60 +1,27 @@
 @import url(http://fonts.googleapis.com/css?family=Brawler);
 
-body  {
+body {
+    width:70%;
+    margin:1em auto 3em auto;
     font-family: Brawler;
-    font-size: 16pt;
+    font-size: 18pt;
     font-style: normal;
     font-weight: 400;
-    line-height: 1.5em;
     color: #2E2E2E;
 }
 
-.navbar {
-    font-size: 140%;
-    margin: auto;
-    width: 75%;
-    text-align: center;
+#twitter {
+    position:fixed;
+    margin:1em;
+    left:0px;
+    top:0px;
 }
 
-.navbar li {
-    display:inline;
-    margin: 1em;
-    padding: 12px;
-    border-radius: 10px;
+.container2 {
+    font-size: 14pt;
 }
 
-.navbar li:hover {
-    background-color: #B45F04;
-    }
-
-a {
-    text-decoration: none;
-}
-
-.navbar a:hover {
-    color: white;
-    }
-
-.container {
-    text-align: justify;
-    width: 75%; 
-    margin: auto; 
-    margin-top: 3em;
-    font-size:100%;
-    margin-bottom: 3em;
-}
-
-li.active {
-    background-color: #eee;
-}
-
-#twitter-widget-0 {
-    position: fixed; 
-    top: .7em; 
-    left:.7em;
-}
-
-.container img {
+.container2 img {
     display: block;
     max-width: 170px;
     border-radius: 50%;
@@ -63,27 +30,7 @@ li.active {
 }
 
 .jumbotron {
-    color: white;
-    padding: 1em;
-    background-color: #088A29;
-    border-radius: 8px;
-    font-size: 120%;
-    line-height: 1.5em;
-    box-shadow: 1px 1px 8px #555;
+    margin:1em;
+    border-radius:10px;
 }
 
-.jumbotron p {
-    margin:0;
-    padding:.3em;
-}
-
-.jumbotron a {
-    color: white;
-}
-
-#who {
-    font-style:italic;
-    background-color: #eee;
-    padding: .4em;
-    border-radius: 8px;
-}
