--- a/src/jecode/views/templates/base.html
+++ b/src/jecode/views/templates/base.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="/css/generic.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="/css/generic2.css" />
     <title>jecode.org: apprenons l'informatique... à l'école et ailleurs !</title>
   </head>
 
@@ -16,25 +19,25 @@
 
   <body>
 
-    <a href="https://twitter.com/share"
-       class="twitter-share-button"
-       data-lang="fr" data-size="large" data-count="yes"
-       data-hashtags="jecode">Tweeter</a>
+    <div id="twitter">
+      <a href="https://twitter.com/share"
+	 class="twitter-share-button"
+	 data-lang="fr" data-size="large" data-count="yes"
+	 data-hashtags="jecode">Tweeter</a>
+    </div>
 
     <script>!function(d,s,id){var
       js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
       'script', 'twitter-wjs');
     </script>
 
-    <div class="navbar">
-      <ul class="nav">
-        <li class="{{home-selected}}"><a href="/">jecode.org</a></li>
-        <li class="{{person-selected}}"><a href="/codeurs">Codeurs</a></li>
-        <li class="{{about-selected}}"><a href="/apropos">À propos</a></li>
-      </ul>
-    </div>
-
-    <div class="container">
+    <ul class="nav nav-tabs">
+      <li class="{{home-selected}}"><a href="/">jecode.org</a></li>
+      <li class="{{person-selected}}"><a href="/codeurs">Codeurs</a></li>
+      <li class="{{about-selected}}"><a href="/apropos">À propos</a></li>
+    </ul>
+    
+    <div class="container2">
       {% block content %}
       {% endblock %}
     </div>
