--- a/src/jecode/views/templates/base.html
+++ b/src/jecode/views/templates/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="/css/generic2.css" />
+    <link type="text/css" rel="stylesheet" href="/css/generic.css" />
     <title>jecode.org: apprenons l'informatique... à l'école et ailleurs !</title>
   </head>
 
