--- a/resources/public/css/generic.css
+++ b/resources/public/css/generic.css
@@ -10,6 +10,13 @@ body {
     color: #2E2E2E;
 }
 
+#map { 
+    position:absolute; 
+    top:80px; 
+    height: 555px;
+    width:70%; 
+}
+
 #twitter {
     position:fixed;
     margin:1em;
@@ -19,6 +26,17 @@ body {
 
 .container2 {
     font-size: 14pt;
+}
+
+form {
+    text-align:center;
+    padding-top:1em;
+    margin:auto;
+    width:50%;
+}
+
+button {
+    margin:1em;
 }
 
 .container2 img {
