--- a/src/jecode/views/enlive-html/base.html
+++ b/src/jecode/views/enlive-html/base.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="/css/generic.css" />
     <title>jecode.org: apprenons l'informatique... à l'école et ailleurs !</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Bastien Guerry" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/generic.css" type="text/css" />
   </head>
 
   <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -37,10 +41,10 @@
       <li class="{{carte-selected}}"><a href="/carte">Carte</a></li>
       <li class="{{about-selected}}"><a href="/apropos">À propos</a></li>
     </ul>
+
+    <div id="container2"></div>
     
-    <div class="container2">
-      {% block content %}
-      {% endblock %}
-    </div>
+    <script src="/js/index.js" type="text/javascript"></script>
+    
   </body>
 </html>
