Don't use selmer anymore, use enlive only

--- a/src/jecode/views/html/init.html
+++ b/src/jecode/views/html/init.html
@@ -14,7 +14,7 @@
     <script src="/js/ArrayLikeIsArray.js" type="text/javascript"></script>
     <script src="/js/mapbox.js" type="text/javascript"></script>
     <!--[if lt IE 8]><link href="/css/MarkerCluster.Default.ie.css" rel="stylesheet" type="text/css"><![endif]-->
-     <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
+    <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
@@ -53,8 +53,10 @@
     
     <div id="map"></div>
     <div id="container2"></div>
-    
-    <script src="/js/newinit.js" type="text/javascript"></script>
+
+    <div id="mapjs">
+      <script src="/js/newinit.js" type="text/javascript"></script>
+    </div>
     
   </body>
 </html>
