--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -6,7 +6,14 @@
     <title>jecode.org: apprenons l'informatique... à l'école et ailleurs !</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Bastien Guerry" />
+    <link href="/css/mapbox.css" rel="stylesheet" type="text/css" />
+    <!--[if lt IE 8]><link href="/css/mapbox.ie.css" rel="stylesheet" type="text/css"><![endif]-->
+    <link href="/css/MarkerCluster.css" rel="stylesheet" type="text/css" />
+    <link href="/css/MarkerCluster.Default.css" rel="stylesheet" type="text/css" />
+    <script src="/js/ArrayLikeIsArray.js" type="text/javascript"></script>
+    <script src="/js/mapbox.js" type="text/javascript"></script>
+    <!--[if lt IE 8]><link href="/css/MarkerCluster.Default.ie.css" rel="stylesheet" type="text/css"><![endif]-->
+     <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
@@ -36,15 +43,22 @@
     </script>
 
     <ul class="nav nav-tabs">
-      <li class="{{home-selected}}"><a href="/">jecode.org</a></li>
-      <li class="{{person-selected}}"><a href="/codeurs">Codeurs</a></li>
-      <li class="{{carte-selected}}"><a href="/carte">Carte</a></li>
-      <li class="{{about-selected}}"><a href="/apropos">À propos</a></li>
+      <li id="accueil" class=""><a href="/">Accueil</a></li>
+      <li id="codeurs" class=""><a href="/codeurs">Codeurs</a></li>
+      <li id="carte" class=""><a href="/carte">Carte</a></li>
+      <li id="apropos" class=""><a href="/apropos">À propos</a></li>
     </ul>
 
+    <div id="log">
+      <a id="login" href="/login">Connexion</a><br/>
+      <a id="signin" href="/inscription">Inscription</a>
+    </div>
+
+    <div id="map"></div>
+
     <div id="container2"></div>
-    
-    <script src="/js/index.js" type="text/javascript"></script>
-    
+
+    <div id="mapjs"></div>
+
   </body>
 </html>
