--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -30,12 +30,14 @@
 
   <body>
 
-    <div id="twitter">
-      <a href="https://twitter.com/share"
+    <!-- <div id="logo"> -->
+      <img class="logo" src="/pic/jecode.png" />
+    <!-- </div> -->
+
+    <a href="https://twitter.com/share"
 	 class="twitter-share-button"
 	 data-lang="fr" data-size="large" data-count="yes"
 	 data-hashtags="jecode">Tweeter</a>
-    </div>
 
     <script>!function(d,s,id){var
       js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
