--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -13,7 +13,7 @@
     <script src="/js/ArrayLikeIsArray.js" type="text/javascript"></script>
     <script src="/js/mapbox.js" type="text/javascript"></script>
     <!--[if lt IE 8]><link href="/css/MarkerCluster.Default.ie.css" rel="stylesheet" type="text/css"><![endif]-->
-     <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
+    <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
@@ -31,13 +31,13 @@
   <body>
 
     <!-- <div id="logo"> -->
-      <img class="logo" src="/pic/jecode.png" />
+    <img class="logo" src="/pic/jecode.png" />
     <!-- </div> -->
 
     <a href="https://twitter.com/share"
-	 class="twitter-share-button"
-	 data-lang="fr" data-size="large" data-count="yes"
-	 data-hashtags="jecode">Tweeter</a>
+       class="twitter-share-button"
+       data-lang="fr" data-size="large" data-count="yes"
+       data-hashtags="jecode">Tweeter</a>
 
     <script>!function(d,s,id){var
       js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
@@ -46,8 +46,9 @@
 
     <ul class="nav nav-tabs">
       <li id="accueil" class=""><a href="/">Accueil</a></li>
+      <li id="initiatives" class=""><a href="/initiatives">Initiatives</a></li>
+      <li id="evenements" class=""><a href="/evenements">Événements</a></li>
       <li id="codeurs" class=""><a href="/codeurs">Codeurs</a></li>
-      <li id="carte" class=""><a href="/carte">Carte</a></li>
       <li id="apropos" class=""><a href="/apropos">À propos</a></li>
     </ul>
 
