Ajout flux RSS pour les événements
Ajout entrée "contact" pour les événements
Déplacement de la carte vers evenements/map et initiatives/map

--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -38,6 +38,7 @@
     <input class="form-control" type="text" name="eurl" placeholder="URL de l'événement" />
     <input class="form-control" type="text" name="edate" placeholder="Date de l'événement" />
     <input class="form-control" type="text" name="elocation" placeholder="Lieu" />
+    <input class="form-control" type="text" name="econtact" placeholder="Contact" />
     <input class="form-control" type="text" name="edesc" placeholder="Description sommaire" />
     <input class="form-control" type="hidden" id="lat" name="lat" placeholder="Latitude" />
     <input class="form-control" type="hidden" id="lon" name="lon" placeholder="Longitude" />
