--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -26,8 +26,9 @@
     <input class="form-control" type="hidden" id="lat" name="lat" placeholder="Latitude" />
     <input class="form-control" type="hidden" id="lon" name="lon" placeholder="Longitude" />
     <br/>
-    <p>Situez votre projet en cliquant sur la carte.</p>
     <button type="submit" class="btn btn-info">Ajouter</button>
+    <br/>
+    <p>Situez votre initiative en cliquant sur cette carte :</p>
   </div>
 </form>
 
@@ -43,7 +44,8 @@
     <input class="form-control" type="hidden" id="lat" name="lat" placeholder="Latitude" />
     <input class="form-control" type="hidden" id="lon" name="lon" placeholder="Longitude" />
     <br/>
-    <p>Situez votre événement en cliquant sur la carte.</p>
     <button type="submit" class="btn btn-info">Ajouter</button>
+    <br/>
+    <p>Situez votre événement en cliquant sur cette carte :</p>
   </div>
 </form>
