Ajout liste initiatives et événements
Amélioration des <title></title>

--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -59,6 +59,14 @@
 
     <div id="container2"></div>
 
+    <div id="list">
+      <ul>
+	<li>
+	  <a target="new" href=""></a>
+	</li>
+      </ul>
+    </div>
+
     <div id="map"></div>
 
     <div id="mapjs"></div>
