--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/css/mapbox.css" rel="stylesheet" type="text/css" />
     <!--[if lt IE 8]><link href="/css/mapbox.ie.css" rel="stylesheet" type="text/css"><![endif]-->
-    <link href="/css/MarkerCluster.css" rel="stylesheet" type="text/css" />
+    <link href="/css/MarkerCluster.css" rel="stylesheet"
+	  type="text/css" />
     <link href="/css/MarkerCluster.Default.css" rel="stylesheet" type="text/css" />
     <script src="/js/ArrayLikeIsArray.js" type="text/javascript"></script>
     <script src="/js/mapbox.js" type="text/javascript"></script>
@@ -16,8 +17,11 @@
     <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/generic.css" type="text/css" />
+    <script type="text/javascript" src="/js/jquery.simple-dtpicker.js"></script>
+    <link type="text/css" href="/css/jquery.simple-dtpicker.css" rel="stylesheet" />
   </head>
 
   <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,18 +35,30 @@
   <body>
 
     <!-- <div id="logo"> -->
-    <img class="logo" src="/pic/jecode.png" />
+    <a href="/"><img class="logo" src="/pic/jecode.png" /></a>
     <!-- </div> -->
 
     <a href="https://twitter.com/share"
        class="twitter-share-button"
        data-lang="fr" data-size="large" data-count="yes"
        data-hashtags="jecode">Tweeter</a>
-
+    
     <script>!function(d,s,id){var
       js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
       'script', 'twitter-wjs');
     </script>
+
+    <div id="bottom_right">
+
+      <form action="http://bzg.us7.list-manage1.com/subscribe/post?u=8358825b4c7ae051d07760c3a&amp;id=fb1f0c6978" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre email" style="width:12em" required />
+	<div style="position: absolute; left: -5000px;"><input type="text" name="b_8358825b4c7ae051d07760c3a_fb1f0c6978" value=""/>
+	</div>
+	<div class="clear">
+	  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-warning">Recevoir la newsletter</button>
+	</div>
+      </form>
+    </div>
 
     <ul class="nav nav-tabs">
       <li id="accueil" class=""><a href="/">Accueil</a></li>
