--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -14,38 +14,169 @@
   </div>
 </form>
 
-<form id="submit-initiative" action="/initiatives/nouvelle" method="post">
-  <div class="input-group">
-    <input class="form-control" type="text" name="pname" placeholder="Nom de l'initiative" />
-    <input class="form-control" type="text" name="purl" placeholder="URL du site web" />
-    <input class="form-control" type="text" name="logourl" placeholder="URL du logo" />
-    <input class="form-control" type="text" name="contact" placeholder="Email contact" />
-    <input class="form-control" type="text" name="twitter" placeholder="Compte twitter" />
-    <input class="form-control" type="text" name="plocation" placeholder="Lieu" />
-    <input class="form-control" type="text" name="pdesc" placeholder="Description" />
-    <input class="form-control" type="hidden" id="lat" name="lat" placeholder="Latitude" />
-    <input class="form-control" type="hidden" id="lon" name="lon" placeholder="Longitude" />
-    <br/>
-    <button type="submit" class="btn btn-info">Ajouter</button>
-    <br/>
-    <p>Situez votre initiative en cliquant sur cette carte :</p>
+<form id="submit-initiative" class="form-horizontal" role="form"
+      action="/initiatives/nouvelle" method="post">
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Nom</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="pname" placeholder="Nom de l'initiative" />
+    </div>
   </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">URL</label>
+    <div class="col-sm-7">
+
+      <input class="form-control" type="text" name="purl" placeholder="URL du site web" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">URL logo</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="logourl" placeholder="URL du logo" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Contact</label>
+    <div class="col-sm-7">
+
+      <input class="form-control" type="text" name="contact" placeholder="Adresse email" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Twitter</label>
+    <div class="col-sm-7">
+
+      <input class="form-control" type="text" name="twitter" placeholder="@username" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Adresse</label>
+    <div class="col-sm-7">
+
+      <input class="form-control" type="text" name="plocation" placeholder="Adresse postale complète" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Tags</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="ptags"
+	     placeholder="Tags séparés par des virgules">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Description</label>
+    <div class="col-sm-7">
+      <textarea class="form-control" rows="3" name="edesc" placeholder="Description sommaire"></textarea>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-info btn-lg">
+    Ajouter cette initiative
+  </button>
+
 </form>
 
-<form id="submit-event" action="/evenements/nouveau" method="post">
-  <div class="input-group">
-    <input class="form-control" type="text" name="eorga" placeholder="Organisateur" />
-    <input class="form-control" type="text" name="ename" placeholder="Nom de l'événement" />
-    <input class="form-control" type="text" name="eurl" placeholder="URL de l'événement" />
-    <input class="form-control" type="text" name="edate" placeholder="Date de l'événement" />
-    <input class="form-control" type="text" name="elocation" placeholder="Lieu" />
-    <input class="form-control" type="text" name="econtact" placeholder="Contact" />
-    <input class="form-control" type="text" name="edesc" placeholder="Description sommaire" />
-    <input class="form-control" type="hidden" id="lat" name="lat" placeholder="Latitude" />
-    <input class="form-control" type="hidden" id="lon" name="lon" placeholder="Longitude" />
-    <br/>
-    <button type="submit" class="btn btn-info">Ajouter</button>
-    <br/>
-    <p>Situez votre événement en cliquant sur cette carte :</p>
+<form class="form-horizontal" role="form" 
+      action="/evenements/nouveau" method="post"
+      id="submit-event">
+  
+  <h2>Décrivez votre événement</h2>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Nom</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="ename"
+	     placeholder="Nom de l'événement">
+    </div>
   </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Organisateur</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="eorga"
+	     placeholder="Organisateur">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">URL</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="eurl"
+	     placeholder="URL de l'événement">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Début</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="edate_start"
+	     placeholder="Date et heure de début">
+    </div>
+    <script type="text/javascript">
+      $(function(){
+      $('*[name=edate_start]').appendDtpicker();
+      });
+    </script>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Fin</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="edate_end"
+	     placeholder="Date et heure de fin">
+    </div>
+    <script type="text/javascript">
+      $(function(){
+      $('*[name=edate_end]').appendDtpicker();
+      });
+    </script>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Lieu</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="elocation"
+	     placeholder="Adresse physique complète">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Contact</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="econtact"
+	     placeholder="Adresse email">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Tags</label>
+    <div class="col-sm-7">
+      <input class="form-control" type="text" name="etags"
+	     placeholder="Tags séparés par des virgules">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Description</label>
+    <div class="col-sm-7">
+      <textarea class="form-control" rows="3" name="edesc" placeholder="Description sommaire"></textarea>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-info btn-lg">
+    Ajouter cet événement
+  </button>
+
 </form>
+
+<!-- <div style="" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> -->
+<!--   <div class="modal-dialog"> -->
+<!--     <div class="modal-content"> -->
+<!--       <div class="modal-header"> -->
+<!--         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
+<!--         <h4 class="modal-title" id="myModalLabel">Où a lieu votre événement ?</h4> -->
+<!--       </div> -->
+<!--       <div class="modal-body"> -->
+<!-- 	<div id="map"></div> -->
+<!--       </div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+<!-- <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> -->
+<!--   Situer sur une carte -->
+<!-- </button> -->
+
+
