--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -20,8 +20,8 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/generic.css" type="text/css" />
-    <script type="text/javascript" src="/js/jquery.simple-dtpicker.js"></script>
-    <link type="text/css" href="/css/jquery.simple-dtpicker.css" rel="stylesheet" />
+    <script type="text/javascript" src="/js/jquery.datetimepicker.js"></script>
+    <link type="text/css" href="/css/jquery.datetimepicker.css" rel="stylesheet" />
   </head>
 
   <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -78,7 +78,8 @@
     <div id="list">
       <ul>
 	<li>
-	  <a target="new" href=""></a>
+	  <a class="item" target="new" href=""></a>
+	  <a class="edit" href=""></a>
 	</li>
       </ul>
     </div>
