--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -1,15 +1,15 @@
 <form id="login" action="/login" method="post">
   <div class="input-group">
-    <input class="form-control" type="text" id="username" name="username" value="" placeholder="Email" />
-    <input type="password" name="password" class="form-control" placeholder="Mot de passe" />
+    <input class="form-control" type="text" id="username" id="username" name="username" value="" placeholder="Email" />
+    <input type="password" id="password" name="password" class="form-control" placeholder="Mot de passe" />
     <button type="submit" class="btn btn-info">Connexion</button>
   </div>
 </form>
 
 <form id="register" action="/inscription" method="post">
   <div class="input-group">
-    <input class="form-control" type="text" id="email" name="email" value="" placeholder="Email" />
-    <input class="form-control" type="password" id="password" name="password" placeholder="Mot de passe" />
+    <input class="form-control" type="text" id="email" id="email" name="email" value="" placeholder="Email" />
+    <input class="form-control" type="password" id="password" id="password" name="password" placeholder="Mot de passe" />
     <button type="submit" class="btn btn-danger">Inscription</button>
   </div>
 </form>
@@ -20,58 +20,58 @@
   <div class="form-group">
     <label class="col-sm-2 control-label">Nom</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="pname" placeholder="Nom de l'initiative" />
+      <input class="form-control" type="text" id="pname" name="pname" placeholder="Nom de l'initiative" />
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">URL</label>
     <div class="col-sm-7">
 
-      <input class="form-control" type="text" name="purl" placeholder="URL du site web" />
+      <input class="form-control" type="text" id="purl" name="purl" placeholder="URL du site web" />
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">URL logo</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="logourl" placeholder="URL du logo" />
+      <input class="form-control" type="text" id="logourl" name="logourl" placeholder="URL du logo" />
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Contact</label>
     <div class="col-sm-7">
 
-      <input class="form-control" type="text" name="contact" placeholder="Adresse email" />
+      <input class="form-control" type="text" id="contact" name="contact" placeholder="Adresse email" />
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Twitter</label>
     <div class="col-sm-7">
 
-      <input class="form-control" type="text" name="twitter" placeholder="@username" />
+      <input class="form-control" type="text" id="twitter" name="twitter" placeholder="@username" />
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Adresse</label>
     <div class="col-sm-7">
 
-      <input class="form-control" type="text" name="plocation" placeholder="Adresse postale complète" />
+      <input class="form-control" type="text" id="plocation" name="plocation" placeholder="Adresse postale complète" />
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Tags</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="ptags"
+      <input class="form-control" type="text" id="ptags" name="ptags"
 	     placeholder="Tags séparés par des virgules">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Description</label>
     <div class="col-sm-7">
-      <textarea class="form-control" rows="3" name="edesc" placeholder="Description sommaire"></textarea>
+      <textarea class="form-control" rows="3" id="pdesc" name="pdesc" placeholder="Description sommaire"></textarea>
     </div>
   </div>
 
-  <button type="submit" class="btn btn-info btn-lg">
+  <button id="submit-init-btn" type="submit" class="btn btn-info btn-lg">
     Ajouter cette initiative
   </button>
 
@@ -81,81 +81,81 @@
       action="/evenements/nouveau" method="post"
       id="submit-event">
   
-  <h2>Décrivez votre événement</h2>
+  <h2 id="event_title">Décrivez votre événement</h2>
 
   <div class="form-group">
     <label class="col-sm-2 control-label">Nom</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="ename"
+      <input class="form-control" type="text" id="ename" name="ename"
 	     placeholder="Nom de l'événement">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Organisateur</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="eorga"
+      <input class="form-control" type="text" id="eorga" name="eorga"
 	     placeholder="Organisateur">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">URL</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="eurl"
+      <input class="form-control" type="text" id="eurl" name="eurl"
 	     placeholder="URL de l'événement">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Début</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="edate_start"
+      <input class="form-control" type="text" id="edate_start" name="edate_start"
 	     placeholder="Date et heure de début">
     </div>
     <script type="text/javascript">
       $(function(){
-      $('*[name=edate_start]').appendDtpicker();
+      jQuery('#edate_start').datetimepicker();
       });
     </script>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Fin</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="edate_end"
+      <input class="form-control" type="text" id="edate_end" name="edate_end"
 	     placeholder="Date et heure de fin">
     </div>
     <script type="text/javascript">
       $(function(){
-      $('*[name=edate_end]').appendDtpicker();
+      jQuery('#edate_end').datetimepicker();
       });
     </script>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Lieu</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="elocation"
+      <input class="form-control" type="text" id="elocation" name="elocation"
 	     placeholder="Adresse physique complète">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Contact</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="econtact"
+      <input class="form-control" type="text" id="econtact" name="econtact"
 	     placeholder="Adresse email">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Tags</label>
     <div class="col-sm-7">
-      <input class="form-control" type="text" name="etags"
+      <input class="form-control" type="text" id="etags" name="etags"
 	     placeholder="Tags séparés par des virgules">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Description</label>
     <div class="col-sm-7">
-      <textarea class="form-control" rows="3" name="edesc" placeholder="Description sommaire"></textarea>
+      <textarea class="form-control" rows="3" id="edesc" name="edesc" placeholder="Description sommaire"></textarea>
     </div>
   </div>
-  <button type="submit" class="btn btn-info btn-lg">
+  <button id="submit-event-btn" type="submit" class="btn btn-info btn-lg">
     Ajouter cet événement
   </button>
 
