Add basic Github login.
Also remove inconsistent messages about subscribing/logging in.
These messages should be added from the HTML templates, not from
the /md/ content.

--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -69,7 +69,8 @@
     </ul>
 
     <div id="log">
-      <a id="login" href="/login">Connexion</a><br/>
+      <a id="github" href="/github">Connexion Github</a>
+      <a id="login" href="/login">Connexion email</a>
       <a id="signin" href="/inscription">Inscription</a>
     </div>
 
