Rework UI templates and db.
Integrate email and event validation in templates.
Allow to add ages for events -- prevent errors when
there is no ages or tags entered.

--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -69,9 +69,11 @@
     </ul>
 
     <div id="log">
-      <a id="github" href="/github">Connexion Github</a>
-      <a id="login" href="/login">Connexion email</a>
-      <a id="signin" href="/inscription">Inscription</a>
+      <ul>
+	<li><a id="github" href="/github">Connexion Github</a></li>
+	<li><a id="connexion" href="/login">Connexion email</a></li>
+	<li><a id="signin" href="/inscription">Inscription</a></li>
+      </ul>
     </div>
 
     <div id="container2"></div>
@@ -88,6 +90,8 @@
     <div id="map"></div>
 
     <div id="mapjs"></div>
+
+    <div id="formjs"></div>
 
   </body>
 </html>
