--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -36,12 +36,12 @@
       <input class="form-control" type="text" id="purl" name="purl" placeholder="URL du site web" />
     </div>
   </div>
-  <div class="form-group">
-    <label class="col-sm-2 control-label">URL logo</label>
-    <div class="col-sm-7">
-      <input class="form-control" type="hidden" id="logourl" name="logourl" placeholder="URL du logo" />
-    </div>
-  </div>
+  <!-- <div class="form-group"> -->
+  <!--   <label class="col-sm-2 control-label">URL logo</label> -->
+  <!--   <div class="col-sm-7"> -->
+  <input class="form-control" type="hidden" id="logourl" name="logourl" placeholder="URL du logo" />
+  <!--   </div> -->
+  <!-- </div> -->
   <div class="form-group">
     <label class="col-sm-2 control-label">Contact</label>
     <div class="col-sm-7">
