Implement a "hide" field for events and initiatives.
There is no delete button for now, instead, use this
ad hoc mechanism.

--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -76,7 +76,12 @@
       <textarea class="form-control" rows="3" id="pdesc" name="pdesc" placeholder="Description sommaire"></textarea>
     </div>
   </div>
-
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Cacher</label>
+    <div class="col-sm-7">
+      <input type="checkbox" id="hide" name="hide" value="hide"/>
+    </div>
+  </div>
   <button id="submit-init-btn" type="submit" class="btn btn-info btn-lg">
     Ajouter cette initiative
   </button>
@@ -166,6 +171,12 @@
     <label class="col-sm-2 control-label">Description</label>
     <div class="col-sm-7">
       <textarea class="form-control" rows="3" id="edesc" name="edesc" placeholder="Description sommaire"></textarea>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Cacher</label>
+    <div class="col-sm-7">
+      <input type="checkbox" id="hide" name="hide" value="hide"/>
     </div>
   </div>
   <button id="submit-event-btn" type="submit" class="btn btn-info btn-lg">
