--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -15,10 +15,10 @@
     <script src="/js/mapbox.js" type="text/javascript"></script>
     <!--[if lt IE 8]><link href="/css/MarkerCluster.Default.ie.css" rel="stylesheet" type="text/css"><![endif]-->
     <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"/>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/generic.css" type="text/css" />
     <script type="text/javascript" src="/js/jquery.datetimepicker.js"></script>
     <link type="text/css" href="/css/jquery.datetimepicker.css" rel="stylesheet" />
