Précisions sur ce que jecode.org peut apporter

--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -64,8 +64,8 @@
       <li id="accueil" class=""><a href="/">Accueil</a></li>
       <li id="initiatives" class=""><a href="/initiatives">Initiatives</a></li>
       <li id="evenements" class=""><a href="/evenements">Événements</a></li>
-      <li id="codeurs" class=""><a href="/codeurs">Hein?</a></li>
-      <li id="apropos" class=""><a href="/apropos">Au fait...</a></li>
+      <li id="codeurs" class=""><a href="/codeurs">Témoignages</a></li>
+      <li id="apropos" class=""><a href="/apropos">À propos</a></li>
     </ul>
 
     <div id="log">
