--- a/src/jecode/views/html/map.html
+++ b/src/jecode/views/html/map.html
@@ -15,7 +15,7 @@
     <script src="/js/mapbox.js" type="text/javascript"></script>
     <!--[if lt IE 8]><link href="/css/MarkerCluster.Default.ie.css" rel="stylesheet" type="text/css"><![endif]-->
     <script src="/js/leaflet.markercluster.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/css/generic.css" type="text/css" />
+    <link rel="stylesheet" href="/css/iframe.css" type="text/css" />
   </head>
 
   <body>
