--- a/resources/public/css/iframe.css
+++ b/resources/public/css/iframe.css
@@ -1,12 +1,9 @@
-body {
-    margin:0;
-    padding:0;
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
 #map {
-    position:absolute;
-    height:100%;
-    width:100%;
-    margin:0;
-    padding:0;
+    position: absolute;
+    width: 100%;
 }
