--- a/resources/public/css/iframe.css
+++ b/resources/public/css/iframe.css
@@ -1,9 +1,11 @@
-/* html, body { */
-/*     margin: 0; */
-/*     padding: 0; */
-/* } */
+body {
+    margin:0;
+    padding:0;
+}
 
 #map {
-    position: absolute;
-    width: 100%;
+    position:absolute;
+    top:0;
+    bottom:0;
+    width:100%;
 }
