--- a/resources/public/css/generic.css
+++ b/resources/public/css/generic.css
@@ -25,12 +25,10 @@ img.logo {
     width: 15%;
 }
 
-
-.twitter-share-button {
+#bottom_left {
     position: fixed;
     bottom: 1em;
     left: 1em;
-    background-color: white;
 }
 
 #bottom_right {
@@ -62,19 +60,20 @@ img.logo {
     text-decoration: none;
 }
 
-#login_form, #register_form {
-    text-align:center;
+#login_form, #register_form, #rappel_form {
     padding-top:1em;
-    margin:auto;
-    width:50%;
+    margin:0 auto;
+    width:60%;
 }
+
+#input-group {width:500px;}
 
 #submit-initiative {
     padding-top:1em;
 }
 
 button {
-    margin:.4em;
+    margin:1em 0 1em 0;
 }
 
 #container2 {
