Un onglet séparé pour la "carte"
- Fusion des deux cartes.
- Affichage sélectif des initiatives et/ou événements.

--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -66,6 +66,7 @@
 
     <ul class="nav nav-tabs">
       <li id="accueil" class=""><a href="/">Accueil</a></li>
+      <li id="carte" class=""><a href="/carte">Carte</a></li>
       <li id="initiatives" class=""><a href="/initiatives">Initiatives</a></li>
       <li id="evenements" class=""><a href="/evenements">Événements</a></li>
       <li id="codeurs" class=""><a href="/codeurs">Témoignages</a></li>
@@ -81,6 +82,13 @@
     </div>
 
     <div id="container2"></div>
+
+    <div id="showlinks">
+      <ul>
+	<li><a id="display_initiatives" href="#">Afficher/cacher les initiatives</a></li>
+	<li><a id="display_events" href="#">Afficher/cacher les événements</a></li>
+      </ul>
+    </div>
 
     <div id="list">
       <ul>
