--- a/src/jecode/views/html/forms.html
+++ b/src/jecode/views/html/forms.html
@@ -3,7 +3,7 @@
     <input class="form-control" type="text" id="email" id="email" name="email" value="" placeholder="Email" />
     <button type="submit" class="btn btn-info">Envoyer un nouveau mot de passe</button>
   </div>
-  <h3>Si vous n'avez pas de compte, <a href="/inscription">inscrivez-vous</a> d'abord.</h3>
+  <p>Si vous n'avez pas de compte, <a href="/inscription">inscrivez-vous</a> d'abord.</p>
 </form>
 
 <form id="login_form" action="/login" method="post" novalidate>
@@ -12,8 +12,8 @@
     <input type="password" id="password" name="password" class="form-control" placeholder="Mot de passe" />
     <button type="submit" class="btn btn-info">Connexion</button>
   </div>
-  <h3>Si vous n'avez pas de compte, <a href="/inscription">inscrivez-vous</a> d'abord.</h3>
-  <h3>Pour demander un nouveau mot de passe, <a href="/rappel">c'est ici</a>.</h3>
+  <p>Si vous n'avez pas de compte, <a href="/inscription">inscrivez-vous</a> d'abord.</p>
+  <p>Pour demander un nouveau mot de passe, <a href="/rappel">c'est ici</a>.</p>
 </form>
 
 <form id="register_form" action="/inscription" method="post" novalidate>
@@ -22,8 +22,8 @@
     <input class="form-control" type="password" id="password" id="password" name="password" placeholder="Mot de passe" />
     <button type="submit" class="btn btn-danger">Inscription</button>
   </div>
-  <h3>Si vous avez déjà un compte, <a href="/login">connectez-vous</a> directement.</h3>
-  <h3>Pour demander un nouveau mot de passe, <a href="/rappel">c'est ici</a>.</h3>
+  <p>Si vous avez déjà un compte, <a href="/login">connectez-vous</a> directement.</p>
+  <p>Pour demander un nouveau mot de passe, <a href="/rappel">c'est ici</a>.</p>
 </form>
 
 <form id="submit-initiative" class="form-horizontal" role="form"
