Fix "mixed content" errors.

--- a/resources/public/css/generic.css
+++ b/resources/public/css/generic.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Brawler);
+@import url(https://fonts.googleapis.com/css?family=Brawler);
 
 body {
     width:67%;
