--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -46,7 +46,7 @@
 	 data-hashtags="jecode">Tweeter</a>
       
       <script>!function(d,s,id){var
-	js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
+	js,fjs=d.getElementsByTagName(s)[0],p=/^https:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 	'script', 'twitter-wjs');
       </script>
 
@@ -54,7 +54,7 @@
 
     <div id="bottom_right">
 
-      <form action="http://bzg.us7.list-manage1.com/subscribe/post?u=8358825b4c7ae051d07760c3a&amp;id=fb1f0c6978" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <form action="//bzg.us7.list-manage1.com/subscribe/post?u=8358825b4c7ae051d07760c3a&amp;id=fb1f0c6978" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre email" style="width:12em" required />
 	<div style="position: absolute; left: -5000px;"><input type="text" name="b_8358825b4c7ae051d07760c3a_fb1f0c6978" value=""/>
 	</div>
