Update mailchimp form to avoid mixed content error.

--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -54,14 +54,26 @@
 
     <div id="bottom_right">
 
-      <form action="http://bzg.us7.list-manage1.com/subscribe/post?u=8358825b4c7ae051d07760c3a&amp;id=fb1f0c6978" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre email" style="width:12em" required />
-	<div style="position: absolute; left: -5000px;"><input type="text" name="b_8358825b4c7ae051d07760c3a_fb1f0c6978" value=""/>
+      <!-- Begin MailChimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css" />
+      <style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      </style>
+      <div id="mc_embed_signup">
+	<form action="//jecode.us7.list-manage.com/subscribe/post?u=8358825b4c7ae051d07760c3a&amp;id=fb1f0c6978" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	  <div id="mc_embed_signup_scroll">
+	    <label for="mce-EMAIL">Recevoir la newsletter</label>
+	    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Courriel" required />
+	    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+	    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+	      <input type="text" name="b_8358825b4c7ae051d07760c3a_fb1f0c6978" tabindex="-1" value="" />
+	    </div>
+	    <div class="clear">
+	      <input type="submit" value="Merci!" name="subscribe" id="mc-embedded-subscribe" class="button" />
+	    </div>
+	  </form>
 	</div>
-	<div class="clear">
-	  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-warning">Recevoir la newsletter</button>
-	</div>
-      </form>
+      </div>
     </div>
 
     <ul class="nav nav-tabs">
